# statusinvest

./: README.md  pyproject.toml
statusinvest/: stock.py  utils.py  wrapper.py
